--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,7 +1,5 @@
-$primary: (
-  default: hsl(26, 100%, 55%),
-  pale: hsl(25, 100%, 94%),
-);
+$primary: hsl(26, 100%, 55%);
+$label: hsl(25, 100%, 94%);
 
 $background: hsl(0, 0%, 100%);
 
@@ -13,3 +11,29 @@ $card: hsl(223, 64%, 98%);
 $foreground: hsl(0, 0%, 0%);
 
 $opacity: 75%;
+
+@mixin recolor($color: #000) {
+  $r: calc(red($color) / 255);
+  $g: calc(green($color) / 255);
+  $b: calc(blue($color) / 255);
+  $a: 1;
+
+  // grayscale fallback if SVG from data url is not supported
+  $lightness: lightness($color);
+  filter: saturate(0%) brightness(0%) invert($lightness) opacity($opacity);
+
+  // color filter
+  $svg-filter-id: "recolor";
+  filter: url('data:image/svg+xml;utf8,\
+      <svg xmlns="http://www.w3.org/2000/svg">\
+        <filter id="#{$svg-filter-id}" color-interpolation-filters="sRGB">\
+          <feColorMatrix type="matrix" values="\
+            0 0 0 0 #{$r}\
+            0 0 0 0 #{$g}\
+            0 0 0 0 #{$b}\
+            0 0 0 #{$a} 0\
+          "/>\
+        </filter>\
+      </svg>\
+      ##{$svg-filter-id}');
+}
