--- a/src/sass/components/_topbar.scss
+++ b/src/sass/components/_topbar.scss
@@ -12,6 +12,11 @@
     display: none;
   }
 
+  @media (max-width: 70rem) {
+    gap: 0.75rem;
+    padding-block: 1rem;
+  }
+
   @media (max-width: 50rem) {
     gap: 1rem;
     padding: 0.5rem 1.5rem;
@@ -33,6 +38,13 @@
     ul {
       display: flex;
       gap: 1.5rem;
+    }
+
+    @media (max-width: 70rem) {
+      margin-left: 0;
+      ul {
+        gap: 1rem;
+      }
     }
 
     @media (max-width: 50rem) {
@@ -75,6 +87,10 @@
     border-radius: 100vmax;
     border: 2px transparent solid;
     transition: 300ms;
+
+    @media (max-width: 70rem) {
+      width: 3rem;
+    }
 
     @media (max-width: 50rem) {
       width: 2.5rem;
