--- a/src/sass/components/_topbar.scss
+++ b/src/sass/components/_topbar.scss
@@ -4,12 +4,18 @@
 
 .topbar {
   @include row(0);
+  position: relative;
   gap: 2.5rem;
   padding-block: 1.5rem;
   border-bottom: 2px solid colors.$card;
 
   .menu {
     display: none;
+    cursor: pointer;
+  }
+
+  .logo{
+    cursor: pointer;
   }
 
   @media (max-width: 70rem) {
@@ -52,8 +58,10 @@
     }
   }
 
+
   .cart {
     position: relative;
+    min-width: 1.5rem;
 
     .cart-icon {
       width: 1.5rem;
@@ -80,6 +88,82 @@
     &:hover .cart-icon {
       @include colors.recolor(colors.$text);
     }
+
+    
+  }
+  .cart-view{
+    position: absolute;
+    z-index: 2;
+    top: 100%;
+    right: -2.5rem;
+    margin: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    min-width: 20rem;
+    max-width: 30rem;
+    min-height: 15rem;
+    background-color: colors.$background;
+    border-radius: 0.5rem;
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+
+    @media (max-width:50rem) {
+      right: 0;
+    }
+
+    @media (max-width:30rem) {
+      left: 0;
+    }
+
+    >*{
+      padding: 1.25rem;
+    }
+
+    h3{
+      font-weight: fonts.$bold;
+      border-bottom: 2px solid colors.$card;
+    }
+
+    .cart-list{
+      @include column(0);
+      flex-grow: 1;
+      align-items: stretch;
+      justify-content: center;
+
+      >p{
+        text-align: center;
+      }
+
+      .cart-item{
+        @include row(1rem);
+        padding-bottom: 1rem;
+
+        .image{
+          width: 3.5rem;
+          border-radius: 0.5rem;
+          background-color: black;
+        }
+
+        .details{
+          @include column(0.5rem);
+          align-items: flex-start;
+          flex-grow: 1;
+
+          p{
+            color: colors.$subtitle;
+          }
+
+          .total{
+            color: colors.$text;
+            font-weight: fonts.$bold;
+          }
+        }
+
+        .remove{
+          cursor: pointer;
+        }
+      }
+    }
   }
 
   .avatar {
@@ -98,6 +182,53 @@
 
     &:hover {
       border: 2px colors.$primary solid;
+      cursor: pointer;
     }
+  }
+}
+
+.navbar{
+  position: fixed;
+  display: none;
+  z-index: 3;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  min-width: 20rem;
+  background-color: colors.$background;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+
+  @media (max-width:50rem) {
+    display: flex;
+  }
+
+  >*{
+  margin: 1.5rem;
+  }
+
+  img {
+    cursor: pointer;
+  }
+
+  ul{
+    @include column(2rem);
+    align-items: flex-start;
+
+    a{
+      font-size: map-get(fonts.$sizes, 'xl' );
+      font-weight: fonts.$bold;
+      color: colors.$text;
+    }
+  }
+
+  &::before{
+    position: fixed;
+    content: '';
+    background-color: rgba(0, 0, 0, 0.5);
+    left: 20rem;
+    right: 0;
+    height: 100vh;
   }
 }
