--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -35,6 +35,8 @@
 
     .cover {
       border-radius: 1rem;
+      cursor: pointer;
+
       @media (max-width: 50rem) {
         border-radius: 0;
       }
@@ -97,6 +99,10 @@
         max-width: 14px;
         margin-block: 3px;
         transition: 300ms;
+
+        &:first-child{
+          padding: 10px 0;
+        }
 
         &:hover {
           @include colors.recolor(lighten(colors.$primary, 15%));
