--- a/src/sass/components/_topbar.scss
+++ b/src/sass/components/_topbar.scss
@@ -6,8 +6,8 @@
   @include row(0);
   position: relative;
   gap: 2.5rem;
-  padding-block: 1.5rem;
   border-bottom: 2px solid colors.$card;
+  
 
   .menu {
     display: none;
@@ -19,8 +19,8 @@
   }
 
   @media (max-width: 70rem) {
-    gap: 0.75rem;
-    padding-block: 1rem;
+    gap: 1rem;
+    // padding-block: 1rem;
   }
 
   @media (max-width: 50rem) {
@@ -40,10 +40,23 @@
   nav {
     flex-grow: 1;
     margin-left: 2rem;
-
+    
     ul {
       display: flex;
       gap: 1.5rem;
+
+      li{
+        padding-block: 3rem 2.5rem;
+
+        @media (max-width:70em) {
+          padding-block: 2rem 1.5rem;
+        }
+
+        &:hover{
+          border-bottom: solid orangered 5px;
+          margin-bottom: -5px;
+        }
+      }
     }
 
     @media (max-width: 70rem) {
