--- a/src/sass/components/_image.scss
+++ b/src/sass/components/_image.scss
@@ -10,48 +10,52 @@
   width: fit-content;
   transform: translate(-50%, -50%);
 
-    @media (max-width:50rem) {
-        display: none;
-    }
+  @media (max-width: 50rem) {
+    display: none;
+  }
 
   .close {
     align-self: flex-end;
     cursor: pointer;
     @include colors.recolor(white);
+
+    &:hover {
+      @include colors.recolor(colors.$primary);
+    }
   }
 
-  .image-carousel{
+  .image-carousel {
     position: relative;
 
     .image {
-        margin: 1rem 0;
-        max-height: 60vh;
-        border-radius: 1rem;
-      }
+      margin: 1rem 0;
+      max-height: 60vh;
+      border-radius: 1rem;
+    }
 
-      .next, .previous{
-        position: absolute;
-        background-color: white;
-        padding: 0.75rem;
-        border-radius: 100vmax;
-        height: 1.25rem;
-        width: 1.25rem;
-        object-fit: contain;
-        top: 50%;
-        cursor: pointer;
-      }
+    .next,
+    .previous {
+      position: absolute;
+      background-color: white;
+      padding: 0.75rem;
+      border-radius: 100vmax;
+      height: 1.25rem;
+      width: 1.25rem;
+      object-fit: contain;
+      top: 50%;
+      cursor: pointer;
+    }
 
-      .next{
-        right: 0;
-        transform: translate(50%,-50%);
-      }
+    .next {
+      right: 0;
+      transform: translate(50%, -50%);
+    }
 
-      .previous{
-        left: 0;
-        transform: translate(-50%,-50%);
-      }
-
-  } 
+    .previous {
+      left: 0;
+      transform: translate(-50%, -50%);
+    }
+  }
 
   .thumbnails {
     display: flex;
