--- a/src/sass/components/_image.scss
+++ b/src/sass/components/_image.scss
@@ -37,13 +37,16 @@
     .previous {
       position: absolute;
       background-color: white;
-      padding: 0.75rem;
+      padding: 0.75rem 0.625rem 0.75rem 0.875rem;
       border-radius: 100vmax;
       height: 1.25rem;
       width: 1.25rem;
-      object-fit: contain;
       top: 50%;
       cursor: pointer;
+
+      &:hover img {
+        @include colors.recolor(colors.$primary);
+      }
     }
 
     .next {
