--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -42,16 +42,19 @@
         position: absolute;
         display: none;
         background-color: white;
-        padding: 0.75rem;
+        padding: 0.75rem 0.625rem 0.75rem 0.875rem;
         border-radius: 100vmax;
         height: 1.25rem;
         width: 1.25rem;
-        object-fit: contain;
         top: 50%;
         cursor: pointer;
 
         @media (max-width: 50em) {
           display: inline;
+        }
+
+        &:hover img {
+          @include colors.recolor(colors.$primary);
         }
       }
 
